# rstrip

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hello_world.txt  main.py  pyproject.toml  requirements.in  rstrip
.github/: pull_request_template.md
.github/workflows/: python-package.yml  release.ERROR_GITHUB_TOKEN  release.yml
doc/: .gitignore  frtrim  howto-pybadge.sh
rstrip/: rstrip.py
rstrip/reference/: rtrim
tests/: test_rstrip.py
