[project]
name = "rstrip"
version = "0.7.0"
description = "command line tool: rstrip"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
rstrip = "rstrip.rstrip:main"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
